PT-2308: Fix bug (#48)
* PT-2308: Fix bug - when clicking on the quotes, two blades open at the same time, and the text on the bottom is cut off

* PT-2308: Delete empty lines

--- a/src/VirtoCommerce.QuoteModule.Web/Content/css/quoteModule.css
+++ b/src/VirtoCommerce.QuoteModule.Web/Content/css/quoteModule.css
@@ -13,6 +13,7 @@
 {
     padding: 3px;
     font-size: 12px;
+    width: 60%;
 }
 
 .vc-quote .table .table-item.__total .table-col
